--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
             </activation>
         </profile>
         <profile>
-            <id>rezerdevAppiumServers</id>
+            <id>rezervedAppiumServers</id>
             <properties>
                 <appiumServerForIos.url>http://0.0.0.0:4725/wd/hub/</appiumServerForIos.url>
                 <appiumServerForAndroid.url>http://0.0.0.0:4726/wd/hub/</appiumServerForAndroid.url>
